# burn-test

./: #Cargo.toml#  .gitignore  Cargo.toml  flake.nix
src/: data_helpers.rs  main.rs  model.rs  train.rs
