[package]
name = "burn-test"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
# burn = { version = "~0.17", features = ["dataset", "train", "cuda", "autotune", "fusion", "sqlite-bundled"] }
burn = {path = "/home/drozdziak1/code/rust/burn/crates/burn", default-features = false, features = [
  "std",
  "dataset",
  "fusion",
  # "autotune", # Causes CUDA_ERROR_INVALID_VALUE
  "train",
  "cuda",
  "sqlite"]}
hf-hub = "0.4"
log = "0.4"
polars = {version = "0.48", features = ["parquet", "lazy"]}
tokenizers = {version = "0.21", features = ["http"]}
