[package]
name = "burn-test"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
# burn = { version = "~0.17", features = ["dataset", "train", "cuda", "autotune", "fusion", "sqlite-bundled"] }
burn = {git = "https://github.com/tracel-ai/burn", branch = "main", default-features = false, features = [
  "std",
  "dataset",
  "fusion",
  # "autotune", # Causes CUDA_ERROR_INVALID_VALUE
  "train",
  "tui",
  "cuda",
  "sqlite"]}
env_logger = "0.11.8"
half = "2.6.0"
log = "0.4.27"
tokenizers = {version = "0.21", features = ["http"]}
